--- a/fr/index.html
+++ b/fr/index.html
@@ -1,1 +1,34 @@
-!
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil</title>
+    <link rel="stylesheet" href="/src/css/pages/styles.css">
+</head>
+<body>
+    <header>
+        <div class="navbar">
+            <a href="index.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
+            <button>
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">La réplique</a></li>
+                <li><a href="contact.html">Fight Club</a></li>
+                <li><a href="contact.html">David Fincher</a></li>
+                <li><a href="contact.html">Insomnia</a></li>
+                <li><a href="contact.html">Where Is My Mind</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+</body>
+</html>
