début header + ajout proprietes globales

--- a/fr/index.html
+++ b/fr/index.html
@@ -10,11 +10,11 @@
     <header>
         <div class="navbar">
             <a href="index.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
-            <button>
-                <div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+            <button class="navbar__button">
+                <div class="navbar_button_container">
+                    <span class="navbar__button_lines"></span>
+                    <span class="navbar__button_lines"></span>
+                    <span class="navbar__button_lines"></span>
                 </div>
             </button>
         </div>
