--- a/fr/index.html
+++ b/fr/index.html
@@ -20,15 +20,33 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">La réplique</a></li>
-                <li><a href="contact.html">Fight Club</a></li>
-                <li><a href="contact.html">David Fincher</a></li>
-                <li><a href="contact.html">Insomnia</a></li>
-                <li><a href="contact.html">Where Is My Mind</a></li>
+                <li><a href="articles/article1.html">La réplique</a></li>
+                <li><a href="articles/article2.html">Fight Club</a></li>
+                <li><a href="articles/article3.html">David Fincher</a></li>
+                <li><a href="articles/article4.html">Insomnia</a></li>
+                <li><a href="articles/article5.html">Where Is My Mind</a></li>
             </ul>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        
+    </main>
+    <footer class="footer__container">
+        <div class="footer__top">
+            <nav>
+                <ul>
+                    <li><a href="about.html">À propos</a></li>
+                    <li><a href="autresproj.html">Autres projets</a></li>
+                    <li><a href="glossaire.html">Glossaire</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="/public/img/logo.webp" alt="Logo du site">
+        </div>
+        <p>Projet réalisé dans le cadre d’un exercice pédagogique au département MMi de Montbéliard</p>
+        <div class="footer__bottom">
+            <img src="/public/img/logo_mmi.webp" alt="Logo MMI">
+            <a href="/en/index.html"><img src="/public/img/english.webp" alt="Drapeau switch anglais"></a>
+    </footer>
 </body>
 </html>
