--- a/fr/index.html
+++ b/fr/index.html
@@ -29,12 +29,15 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Fill contenu</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit obcaecati blanditiis quidem nihil voluptate nulla, doloremque ipsam, quas tempore ex minus possimus labore eos? Doloribus voluptate exercitationem libero animi omnis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ipsum possimus officiis eius. Debitis amet saepe laudantium laboriosam suscipit architecto velit, obcaecati, quo corporis consequatur porro nostrum quos unde qui.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa at, repellendus cum accusantium, facere magnam ad cupiditate sapiente deleniti numquam corporis, dolorum assumenda. Ut atque, voluptates ullam ratione nobis tempora.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, dignissimos similique vel unde temporibus possimus culpa, quidem corrupti cum qui fugit voluptatem! Voluptatum nostrum tempora commodi aspernatur reprehenderit consequuntur culpa.</p>
+    <main class="home">
+        <div class="home__hero">
+            <img src="/public/img/hero.webp" alt="Image Hero Insomnia">
+            <div class="hero__gradient"></div>
+        </div>
+        <section class="home__content container">
+            <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
+        </section>
+            
     </main>
     <footer class="footer__container">
         <div class="footer__line"></div>
