boutons et card index

--- a/fr/index.html
+++ b/fr/index.html
@@ -36,8 +36,15 @@
         </div>
         <section class="home__content container">
             <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
+            <a class="home__button1" href="articles/article1.html">
+                En savoir plus
+                <img src="/public/icons/Arrow.webp" alt="Icone flèche">
+            </a>
+            <div class="home__card">
+                <img src="/public/img/home_1.webp" alt="Image Fight Club">
+                <a class="home__button2" href="articles/article2.html">Fight Club</a>
+            </div>
         </section>
-            
     </main>
     <footer class="footer__container">
         <div class="footer__line"></div>
