base carrousel index

--- a/fr/index.html
+++ b/fr/index.html
@@ -44,6 +44,42 @@
                 <img src="/public/img/home_1.webp" alt="Image Fight Club">
                 <a class="home__button2" href="articles/article2.html">Fight Club</a>
             </div>
+            <div class="carousel">
+                <div class="carousel__container">
+                    <div class="carousel__item">
+                        <a href="">
+                            <figure>
+                                <img src="/public/img.home_5.webp" alt="">
+                                <figcaption></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="carousel__item">
+                        <a href="">
+                            <figure>
+                                <img src="/public/img.home_5.webp" alt="">
+                                <figcaption></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="carousel__item">
+                        <a href="">
+                            <figure>
+                                <img src="/public/img.home_5.webp" alt="">
+                                <figcaption></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="carousel__item">
+                        <a href="">
+                            <figure>
+                                <img src="/public/img.home_5.webp" alt="">
+                                <figcaption></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer__container">
