--- a/fr/index.html
+++ b/fr/index.html
@@ -21,11 +21,11 @@
         </div>
         <nav class="navbar__menu" x-show="menuOpen">
             <ul class="navbar__menu_items">
-                <li><a href="articles/article1.html">La réplique</a></li>
-                <li><a href="articles/article2.html">Fight Club</a></li>
-                <li><a href="articles/article3.html">David Fincher</a></li>
-                <li><a href="articles/article4.html">Insomnia</a></li>
-                <li><a href="articles/article5.html">Where Is My Mind</a></li>
+                <li><a href="articles/replique.html">La réplique</a></li>
+                <li><a href="articles/film.html">Fight Club</a></li>
+                <li><a href="articles/realisateur.html">David Fincher</a></li>
+                <li><a href="articles/livre.html">Insomnia</a></li>
+                <li><a href="articles/musique.html">Where Is My Mind</a></li>
             </ul>
         </nav>
     </header>
@@ -38,43 +38,27 @@
             <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
             <a class="home__button1" href="articles/article1.html">
                 En savoir plus
-                <img src="/public/icons/Arrow.webp" alt="Icone flèche">
+                <img src="/public/icons/Arrow.svg" alt="Icone flèche">
             </a>
             <div class="home__card">
                 <img src="/public/img/home_1.webp" alt="Image Fight Club">
-                <a class="home__button2" href="articles/article2.html">Fight Club</a>
+                <a class="home__button2" href="articles/film.html">Fight Club</a>
             </div>
             <div class="carousel">
                 <div class="carousel__container">
                     <div class="carousel__item">
-                        <a href="">
+                        <a href="articles/realisateur.html">
                             <figure>
-                                <img src="/public/img.home_5.webp" alt="">
-                                <figcaption></figcaption>
+                                <img src="/public/img/home_2.webp" alt="">
+                                <figcaption>David Fincher, du génie</figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="carousel__item">
-                        <a href="">
+                        <a href="articles/livre.html">
                             <figure>
-                                <img src="/public/img.home_5.webp" alt="">
-                                <figcaption></figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="carousel__item">
-                        <a href="">
-                            <figure>
-                                <img src="/public/img.home_5.webp" alt="">
-                                <figcaption></figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="carousel__item">
-                        <a href="">
-                            <figure>
-                                <img src="/public/img.home_5.webp" alt="">
-                                <figcaption></figcaption>
+                                <img src="/public/img/home_3.webp" alt="">
+                                <figcaption>Insomnia, récit endormi</figcaption>
                             </figure>
                         </a>
                     </div>
