médias site et page article

--- a/fr/index.html
+++ b/fr/index.html
@@ -32,7 +32,7 @@
     <main class="home">
         <div class="home__hero">
             <img src="/public/img/hero.webp" alt="Image Hero Insomnia">
-            <div class="hero__gradient"></div>
+            <div class="hero__gradient-start"></div>
         </div>
         <section class="home__content container">
             <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
