page contact et about

--- a/fr/contact.html
+++ b/fr/contact.html
@@ -39,7 +39,7 @@
             <div class="hero__gradient-end"></div>
         </div>
         <div class="other__defs other__container">
-            <form>
+            <form class="other__contact">
                 <label for="name1">Prénom</label>
                 <input type="text" name="name1" id="name1">
                 <label for="name2">Nom</label>
