--- a/fr/contact.html
+++ b/fr/contact.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main class="other">
-        <div class="other">
+        <div class="other__hero">
             <div class="other__title container">
                 <h1>Contact</h1>
             </div>
