--- a/fr/index.html
+++ b/fr/index.html
@@ -21,11 +21,11 @@
         </div>
         <nav class="navbar__menu" x-show="menuOpen">
             <ul class="navbar__menu_items">
-                <li><a href="articles/replique.html">La réplique</a></li>
-                <li><a href="articles/film.html">Fight Club</a></li>
-                <li><a href="articles/realisateur.html">David Fincher</a></li>
-                <li><a href="articles/livre.html">Insomnia</a></li>
-                <li><a href="articles/musique.html">Where Is My Mind</a></li>
+                <li><a href="/fr/articles/replique.html">La réplique</a></li>
+                <li><a href="/fr/articles/film.html">Fight Club</a></li>
+                <li><a href="/fr/articles/realisateur.html">David Fincher</a></li>
+                <li><a href="/fr/articles/livre.html">Insomnia</a></li>
+                <li><a href="/fr/articles/musique.html">Where Is My Mind</a></li>
             </ul>
         </nav>
     </header>
