--- a/fr/index.html
+++ b/fr/index.html
@@ -32,7 +32,6 @@
     <main class="home">
         <div class="home__hero">
             <img src="/public/img/hero.webp" alt="Image Hero Insomnia">
-            <div class="hero__gradient-start"></div>
         </div>
         <section class="home__content container">
             <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
@@ -104,6 +103,7 @@
         <div class="footer__bottom">
             <img src="/public/img/logo_mmi.webp" alt="Logo MMI">
             <a href="/en/index.html"><img src="/public/img/english.webp" alt="Drapeau switch anglais"></a>
+            </div>
     </footer>
 </body>
 </html>
