fin des pages anglais

--- a/en/film en.html
+++ b/en/film en.html
@@ -80,7 +80,7 @@
             </nav>
             <img src="/public/img/logo.webp" alt="Logo du site">
         </div>
-        <p>Projet réalisé dans le cadre d’un exercice pédagogique au département MMi de Montbéliard</p>
+        <p>Project carried out as part of a pedagogical exercise at the MMi department of Montbéliard</p>
         <div class="footer__bottom">
             <img src="/public/img/logo_mmi.webp" alt="Logo MMI">
             <a href="/fr/articles/film.html"><img src="/public/img/french.webp" alt="Drapeau switch français"></a>
