continue des redirections

--- a/en/accueil.html
+++ b/en/accueil.html
@@ -20,7 +20,7 @@
         <nav class="navbar__menu" x-show="menuOpen" x-transition.duration.300ms>
             <ul class="navbar__menu_items">
                 <li><a href="/fr/articles/replique.html">Replica</a></li>
-                <li><a href="/fr/articles/film.html">Fight Club</a></li>
+                <li><a href="/en/film en.html">Fight Club</a></li>
                 <li><a href="/fr/articles/realisateur.html">David Fincher</a></li>
                 <li><a href="/fr/articles/livre.html">Insomnia</a></li>
                 <li><a href="/fr/articles/musique.html">Where Is My Mind</a></li>
@@ -33,13 +33,13 @@
         </div>
         <section class="home__content container">
             <h1>««With insonia, nothing is real anymore, everything becomes distant. Everything is a copy, a copy, a copy»»</h1>
-            <a class="home__button1" href="articles/article1.html">
+            <a class="home__button1" href="/fr/articles/replique.html">
                 More
                 <img src="/public/icons/Arrow.svg" alt="Icone flèche">
             </a>
             <div class="home__card">
                 <img src="/public/img/home_1.webp" alt="Image Fight Club">
-                <a class="home__button2" href="articles/film.html">Fight Club</a>
+                <a class="home__button2" href="/en/film en.html">Fight Club</a>
             </div>
             <div class="carousel">
                 <h2>Watch Also</h2>
@@ -49,7 +49,7 @@
                     <button class="carousel__button-right" @click="$refs.parent.scrollLeft += $refs.parent.clientWidth"><img
                             src="/public/icons/Arrow.svg" alt="Flèche carrousel droit"></button>
                     <div class="carousel__item">
-                        <a href="articles/realisateur.html">
+                        <a href="/fr/articles/realisateur.html">
                             <figure>
                                 <img src="/public/img/home_2.webp" alt="">
                                 <figcaption>David Fincher, Genious</figcaption>
@@ -57,17 +57,17 @@
                         </a>
                     </div>
                     <div class="carousel__item">
-                        <a href="articles/livre.html">
+                        <a href="/fr/articles/livre.html">
                             <figure>
-                                <img src="/public/img/home_2.webp" alt="">
+                                <img src="/public/img/biblio_6.webp" alt="">
                                 <figcaption>Insomnia, sleeping book</figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="carousel__item">
-                        <a href="articles/livre.html">
+                        <a href="/fr/articles/musique.html">
                             <figure>
-                                <img src="/public/img/home_2.webp" alt="">
+                                <img src="/public/img/musique_1.webp" alt="">
                                 <figcaption>Where is my mind, Pixies</figcaption>
                             </figure>
                         </a>
