--- a/en/contact en.html
+++ b/en/contact en.html
@@ -22,7 +22,7 @@
         <nav class="navbar__menu" x-show="menuOpen">
             <ul class="navbar__menu_items">
                 <li><a href="/fr/articles/replique.html">La réplique</a></li>
-                <li><a href="/fr/articles/film.html">Fight Club</a></li>
+                <li><a href="/en/film en.html">Fight Club</a></li>
                 <li><a href="/fr/articles/realisateur.html">David Fincher</a></li>
                 <li><a href="/fr/articles/livre.html">Insomnia</a></li>
                 <li><a href="/fr/articles/musique.html">Where Is My Mind</a></li>
@@ -40,7 +40,7 @@
             <form class="other__contact">
                 <label for="name1">First Name</label>
                 <input type="text" name="name1" id="name1">
-                <label for="name2">Namr</label>
+                <label for="name2">Name</label>
                 <input type="text" name="name2" id="name2">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
@@ -55,10 +55,10 @@
         <div class="footer__top">
             <nav>
                 <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="autresproj.html">Other projects</a></li>
-                    <li><a href="glossaire.html">Glossary</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/en/about en.html">About</a></li>
+                    <li><a href="/en/autres projets en.html">Other projects</a></li>
+                    <li><a href="/en/glossaire en.html">Glossary</a></li>
+                    <li><a href="/en/contact en.html">Contact</a></li>
                 </ul>
             </nav>
             <img src="/public/img/logo.webp" alt="Logo du site">
