--- a/fr/index.html
+++ b/fr/index.html
@@ -57,26 +57,18 @@
                         </a>
                     </div>
                     <div class="carousel__item">
-                        <a href="articles/livre.html">
+                        <a href="/fr/articles/livre.html">
                             <figure>
-                                <img src="/public/img/home_2.webp" alt="">
-                                <figcaption>Insomnia, récit endormi</figcaption>
+                                <img src="/public/img/biblio_6.webp" alt="">
+                                <figcaption>Insomnia, un recit endormit</figcaption>
                             </figure>
                         </a>
                     </div>
                     <div class="carousel__item">
-                        <a href="articles/livre.html">
+                        <a href="/fr/articles/musique.html">
                             <figure>
-                                <img src="/public/img/home_2.webp" alt="">
-                                <figcaption>Insomnia, récit endormi</figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                    <div class="carousel__item">
-                        <a href="articles/livre.html">
-                            <figure>
-                                <img src="/public/img/home_2.webp" alt="">
-                                <figcaption>Insomnia, récit endormi</figcaption>
+                                <img src="/public/img/musique_1.webp" alt="">
+                                <figcaption>Where is my mind, Pixies</figcaption>
                             </figure>
                         </a>
                     </div>
