titre et corrections

--- a/en/accueil.html
+++ b/en/accueil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/src/css/pages/styles.css">
+    <link rel="icon" href="/public/img/logo.webp">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
@@ -32,7 +33,7 @@
             <img src="/public/img/hero.webp" alt="Image Hero Insomnia">
         </div>
         <section class="home__content container">
-            <h1>««With insonia, nothing is real anymore, everything becomes distant. Everything is a copy, a copy, a copy»»</h1>
+            <h1>«With insonia, nothing is real anymore, everything becomes distant. Everything is a copy, a copy, a copy»</h1>
             <a class="home__button1" href="/fr/articles/replique.html">
                 More
                 <img src="/public/icons/Arrow.svg" alt="Icone flèche">
