--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -51,10 +51,10 @@
         <div class="footer__top">
             <nav>
                 <ul>
-                    <li><a href="about.html">À propos</a></li>
-                    <li><a href="autresproj.html">Autres projets</a></li>
-                    <li><a href="glossaire.html">Glossaire</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/fr/about.html">À propos</a></li>
+                    <li><a href="/fr/autresproj.html">Autres projets</a></li>
+                    <li><a href="/fr/glossaire.html">Glossaire</a></li>
+                    <li><a href="/fr/contact.html">Contact</a></li>
                 </ul>
             </nav>
             <img src="/public/img/logo.webp" alt="Logo du site">
