--- a/fr/biblio.html
+++ b/fr/biblio.html
@@ -39,8 +39,8 @@
         <div class="biblio container">
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_1.webp" alt="Cover Fight Club">
-                    <figcaption>Fight Club (1996)</figcaption>
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=59320.html"><img src="/public/img/biblio_1.webp" alt="Cover Fight Club">
+                    <figcaption>Fight Club (1996)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -49,8 +49,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_2.webp" alt="Cover Zodiac">
-                    <figcaption>Zodiac (2007)</figcaption>
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=59320.html"><img src="/public/img/biblio_2.webp" alt="Cover Zodiac">
+                    <figcaption>Zodiac (2007)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -59,8 +59,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_3.webp" alt="Cover The Social Network">
-                    <figcaption>The Social Network (2010)</figcaption>
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=147912.html"><img src="/public/img/biblio_3.webp" alt="Cover The Social Network">
+                    <figcaption>The Social Network (2010)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -69,8 +69,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_4.webp" alt="Cover Panic Room">
-                    <figcaption>Panic Room (2002)</figcaption>
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=29202.html"><img src="/public/img/biblio_4.webp" alt="Cover Panic Room">
+                    <figcaption>Panic Room (2002)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -79,8 +79,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_5.webp" alt="Cover Mank">
-                    <figcaption>Mank (2020)</figcaption>
+                    <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=275554.html"><img src="/public/img/biblio_5.webp" alt="Cover Mank">
+                    <figcaption>Mank (2020)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -89,8 +89,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_6.webp" alt="Cover Insomnia">
-                    <figcaption>Insomnia (1994)</figcaption>
+                    <a href="https://www.goodreads.com/book/show/1810216.Insomnie?ac=1&from_search=true&qid=60sjOIrFpB&rank=2"><img src="/public/img/biblio_6.webp" alt="Cover Insomnia">
+                    <figcaption>Insomnia (1994)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
@@ -99,8 +99,8 @@
             </div>
             <div class="biblio__item">
                 <figure>
-                    <img src="/public/img/biblio_7.webp" alt="Cover Shining">
-                    <figcaption>Shining (1977)</figcaption>
+                    <a href="https://www.goodreads.com/book/show/11588.The_Shining?from_search=true&from_srp=true&qid=kLuPz3W9AT&rank=1"><img src="/public/img/biblio_7.webp" alt="Cover Shining">
+                    <figcaption>Shining (1977)</figcaption></a>
                 </figure>
                 <div class="biblio__eval">
                     <img src="/public/icons/star.svg" alt="Etoile note du film">
