--- a/en/film en.html
+++ b/en/film en.html
@@ -64,7 +64,7 @@
             <div class="article__extra">
                 <h3>Trailer</h3>
                 <video controls>
-                    <source src="/public/video/fight_club.mp4" type="video/mp4">
+                    <source src="https://matysouvrard.fr/trailer%20english.mp4" type="video/mp4">
             </div>
         </div>
     </main>
