lien externe autre projet

--- a/fr/autresproj.html
+++ b/fr/autresproj.html
@@ -39,17 +39,17 @@
         </div>
         <div class="other__defs other__container">
             <ul>
-                <li>"Kaalsifis" -> Maëlle Coquelet</li>
-                <li>"MysticHowl" -> Anis Amrouche</li>
-                <li>"Hope Games" -> Noélie Talhouarn</li>
-                <li>"Mission Cléopâtre" -> Chloé Vincent</li>
-                <li>"Alien from space" -> Max Prin</li>
-                <li>"Avatar's Legacy" -> Gabriel Moreau</li>
-                <li>"ScarInfo" -> Matthis Boreaniz</li>
-                <li>"La confrérie" -> Kilian Breuil</li>
-                <li>"Senseception" -> Lola Roth</li>
-                <li>"Rush Racing Rivals" -> Antoine Fabre</li>
-                <li>"Paprik-IA" -> Ronan Lefour</li>
+                <a href="https://kaalsifis.maelle-coquelet.fr/"><li>"Kaalsifis" -> Maëlle Coquelet</li></a>
+                <a href="https://mystichowl.aamrouche.fr/"><li>"MysticHowl" -> Anis Amrouche</li></a>
+                <a href="http://hope-games.xn--nolie-talhouarn-cnb.fr/"><li>"Hope Games" -> Noélie Talhouarn</li></a>
+                <a href="https://mission.cleopatre.chloe-vct.fr/"><li>"Mission Cléopâtre" -> Chloé Vincent</li></a>
+                <a href="https://alienfromspaceprinmax.netlify.app/fr/acceuil"><li>"Alien from space" -> Max Prin</li></a>
+                <a href="https://glowing-crumble-2d11c9.netlify.app/"><li>"Avatar's Legacy" -> Gabriel Moreau</li></a>
+                <a href="https://scarinfo.boreaniz.fr/"><li>"ScarInfo" -> Matthis Boreaniz</li></a>
+                <a href="http://laconfrerie.breuil-kilian.fr/"><li>"La confrérie" -> Kilian Breuil</li></a>
+                <a href="https://senseception.lolar.fr/fr/"><li>"Senseception" -> Lola Roth</li></a>
+                <a href="https://merry-creponne-4cceea.netlify.app/"><li>"Rush Racing Rivals" -> Antoine Fabre</li></a>
+                <a href="https://paprik-ia.netlify.app/"><li>"Paprik-IA" -> Ronan Lefour</li></a>
             </ul>
         </div>
     </main>
