--- a/en/film en.html
+++ b/en/film en.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="/fr/index.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
+            <a href="/en/accueil.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
             <button class="navbar__button" :class="menuOpen && 'navbar__button-open'" @click="menuOpen = ! menuOpen">
                     <span class="navbar__button_lines line1"></span>
                     <span class="navbar__button_lines line2"></span>
@@ -44,7 +44,7 @@
                 <p>David Fincher's acclaimed 1999 film "Fight Club" is a work of great complexity, immersing the audience in profound reflections on existence, in which the theme of sleep plays a central role. In this cinematic adventure, the main character, the narrator (played by Edward Norton), struggles with an insurmountable problem of insomnia. This insomnia, both symbolic and concrete, becomes a reflection of his inner torment and his desperate search for meaning in a world he perceives as devoid of interest. The narrator's inability to sleep becomes a clear symbol of his existential malaise. Trapped in a life devoid of passion and meaning, he is obsessed by sleep deprivation, which is in turn a reflection of his lack of contentment. Sleep becomes a means of escape from the insipid reality that consumes him.</p>
                 <figure class="article__image">
                     <img src="/public/img/film_1.webp" alt="Image Fight Club">
-                    <figcaption>Edward Newton talking to himself</figcaption>
+                    <figcaption>Edward Norton talking to himself</figcaption>
                 </figure>
             </div>
             <section>
