--- a/fr/index.html
+++ b/fr/index.html
@@ -34,7 +34,7 @@
         </div>
         <section class="home__content container">
             <h1>«Avec l’insomnie, plus rien n’est réel. Tout devient lointain. Tout est une copie, d’une copie, d’une copie»</h1>
-            <a class="home__button1" href="articles/article1.html">
+            <a class="home__button1" href="/fr/articles/replique.html">
                 En savoir plus
                 <img src="/public/icons/Arrow.svg" alt="Icone flèche">
             </a>
