--- a/en/glossaire en.html
+++ b/en/glossaire en.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="/fr/index.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
+            <a href="/en/accueil.html"><img src="/public/img/logo.webp" alt="Logo header"></a>
             <button class="navbar__button" :class="menuOpen && 'navbar__button-open'" @click="menuOpen = ! menuOpen">
                     <span class="navbar__button_lines line1"></span>
                     <span class="navbar__button_lines line2"></span>
